# 2024-25d-fai2-adsai-group-nlp6

./: .azuremlignore  .env  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AZURE_ML_INTEGRATION.md  AZURE_SYNC_IMPLEMENTATION.md  AzureML_Endpoint_deployment.ipynb  COMMANDS.md  Dockerfile  EVALUATION_PIPELINE_REMOVAL_COMPLETE.md  GEMINI_SETUP_GUIDE.md  LICENSE  METRIC_FIXES_SUMMARY.md  MONITORING_README.md  MONITORING_TECHNICAL_GUIDE.md  Minesweeper.py  PYTORCH_COMPATIBILITY_FIXES.md  README - OLD.md  README.md  README_new.md  README_old.md  TRAINING_PIPELINE_BUGFIX.md  TRAIN_PIPELINE_DATA_REGISTRATION_FIX.md  commands.md  config.json  demo_automatic_sync.py  demo_dag.py  deployment.json  deployment_readme.md  docker-compose.build.yml  docker-compose.portainer.yml  docker-compose.yml  environment.yml  package-lock.json  pyproject.toml  run_azure_training.py  snake game.py  start-build.bat  (+11 more)
.github/workflows/: cicd-pipeline.yml  docker-image.yml  docker-publish.yml  lint.yaml  sphinx-docs.yml  test.yaml
airflow/dags/: inference_preprocessing_job.py  preprocessing_job.py
data/processed/: test.csv  test1.ipynb  train - complete.csv  train.csv
data/processed/train/: group 10_url1.csv  group 11_url1.csv  group 12_url1.csv  (+26 more)
data/raw/: test.ipynb
data/results/: results_api_output_assemblyAI.xlsx  results_assemblyAI.xlsx  results_cli_youtube_output_assemblyAI.xlsx
data/transcript/: transcript.csv
data/transcripts/: transcribed_data_api_output_assemblyAI.xlsx  transcribed_data_assemblyAI.xlsx  transcribed_data_cli_youtube_output_assemblyAI.xlsx
docs/: Documentation.md  MONITORING_README.md  azure_schedule_bugfix.py  conf.py  github_pages_setup.md  index.rst  introduction.rst  requirements-docs.txt  test3.ipynb
docs/_autosummary/: emotion_clf_pipeline.data.rst  emotion_clf_pipeline.model.rst  emotion_clf_pipeline.predict.rst  emotion_clf_pipeline.rst  emotion_clf_pipeline.train.rst
docs/api/: emotion_clf_pipeline.rst  modules.rst
environment/: environment.yml
examples/: azure_schedule_examples.py
frontend/: .env  Dockerfile  GEMINI_FIX_GUIDE.md  README.md  package-lock.json  package.json
frontend OLD/: Dockerfile  package-lock.json  package.json
frontend OLD/src/: App.css  VideoContext.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.js.backup  VideoContext.js  api.js  index.css  index.js  theme.js  utils.js
models/: test4.ipynb
models/encoders/: emotion_encoder.pkl  intensity_encoder.pkl  sub_emotion_encoder.pkl
models/evaluation/: metrics.json  registration_status.json
models/evaluation_outputs/: final_evaluation_results.csv
models/test_encoders/: emotion_encoder.pkl
models/weights/: best_model.pt  best_test_in_intensity_f1_0.4782.pt  best_test_in_sub_emotion_f1_0.1512.pt  best_test_in_sub_emotion_f1_0.1620.pt  best_val_in_emotion_f1_0.1584.pt  best_val_in_emotion_f1_0.5805.pt  best_val_in_intensity_f1_0.4305.pt  best_val_in_intensity_f1_0.5498.pt  best_val_in_sub_emotion_f1_0.1570.pt  best_val_in_sub_emotion_f1_0.1730.pt  dynamic_weights.pt  model_config.json  sync_status.json
monitoring/: README.md  api_metrics.json  dashboard.html
monitoring/prometheus/: prometheus.yml
notebooks/: azure_endpoint copy.ipynb  azure_endpoint.ipynb  facial emotion detection.ipynb  s3_register_environment.ipynb  s3_upload_cleaned_data.ipynb  test5.ipynb
results/evaluation/: azure_sync_status.json  evaluation_report.csv  registration_status.json  training_metrics.json
results/monitoring/: api_metrics.json  drift_detection.json  error_tracking.json  model_performance.json  prediction_logs.json  system_metrics.json
results/predictions/: Camping in an Abandoned WWII Army Base in Remote Alaskan Rainforest.xlsx  Computer Engineering & the End of Moore's Law_ Crash Course Engineering #35.xlsx  How Engineering Robots Works_ Crash Course Engineering #33.xlsx  I Built a Self Landing Satellite.xlsx  Me at the zoo.xlsx  Open Source Motion Capture for Autonomous Drones.xlsx  Rick Astley - Never Gonna Give You Up (Official Music Video).xlsx  Rick Astley - Never Gonna Give You Up (Official Video) (4K Remaster).xlsx  The Best Laptop on Earth... is almost too easy to fix.xlsx  To The Moon & Mars - Aerospace Engineering_ Crash Course Engineering #34.xlsx
results/transcript/: Camping in an Abandoned WWII Army Base in Remote Alaskan Rainforest.xlsx  Computer Engineering & the End of Moore's Law_ Crash Course Engineering #35.xlsx  How Engineering Robots Works_ Crash Course Engineering #33.xlsx  I Built a Self Landing Satellite.xlsx  Me at the zoo.xlsx  Open Source Motion Capture for Autonomous Drones.xlsx  Rick Astley - Never Gonna Give You Up (Official Music Video).xlsx  Rick Astley - Never Gonna Give You Up (Official Video) (4K Remaster).xlsx  The Best Laptop on Earth... is almost too easy to fix.xlsx  To The Moon & Mars - Aerospace Engineering_ Crash Course Engineering #34.xlsx
scripts/: fix_pytorch_compatibility.py
src/: Pipeline.ipynb
src/azure_scripts/: train_model.py  train_model_v21.py
src/emotion_clf_pipeline/: README.md  api.py  api_old.py  azure_endpoint.py  azure_hyperparameter_sweep.py  azure_ops.py  azure_pipeline.py  azure_score.py  azure_sync.py  cli.py  data.py  deploy_aci.py  evaluate.py  features.py  hyperparameter_tuning.py  model.py  monitoring.py  monitoring_backup.py  monitoring_fixed.py  predict.py  stt.py  train.py  transcript.py  transcript_assembly.py  transcript_whisper.py
src/pipeline_scripts/: train_model.py
tests/: README.md  test2.ipynb  test_api.py  test_azure_sync.py  test_cli.py  test_data.py  test_data_.py  test_data_datapreparation_emotiondataset.py  test_data_dataset.py  test_data_datasetloader.py  test_data_features.py  test_deployment_validation.py  test_features.py  test_model_1.py  test_model_2.py  test_model_3.py  test_model_4.py  test_model_CustomPredictor.py  test_model_DEBERTAClassifier.py  test_model_EmotionPredictor.py  test_model_ModelLoader.py  test_predict.py  test_stt.py  test_train.py  test_transcript.py  test_transcript_translator.py  test_translator.py
(+120 files in other folders)
