[project]
name = "emotion-clf-pipeline"
version = "0.1.0"
description = "This project aims to develop an NLP pipeline that processes video or audio, transcribes it, and classifies the emotion. The pipeline will be deployed on Azure using MLOps principles to enable automated workflows, cloud deployment, and robust monitoring."
authors = [
    {name = "Soheil Mohammadpour", email = "231754@buas.nl"},
    {name = "Erfan Salour", email = "230499@buas.nl"},
    {name = "Noah Ivanisevic", email = "235738@buas.nl"},
    {name = "Kosta Ljubisavljevic", email = "233101@buas.nl"},
    {name = "Ricardo de Sousa", email = "235038@buas.nl"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dynamic = ["dependencies"]

[tool.poetry]
# Empty but kept for backward compatibility

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
torch = {version = "*", source = "pytorch-cuda"}
torchvision = {version = "*", source = "pytorch-cuda"}
torchaudio = {version = "*", source = "pytorch-cuda"}
transformers = "^4.51.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
nltk = "^3.9.1"
seaborn = "^0.13.2"
tensorflow = "^2.19.0"
assemblyai = "^0.40.2"
openpyxl = "^3.1.5"
sentence-transformers = "^4.1.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"