[project]
name = "emotion-clf-pipeline"
version = "0.1.0"
description = "This project aims to develop an NLP pipeline that processes video or audio, transcribes it, and classifies the emotion. The pipeline will be deployed on Azure using MLOps principles to enable automated workflows, cloud deployment, and robust monitoring."
authors = [
    {name = "Soheil Mohammadpour", email = "231754@buas.nl"},
    {name = "Erfan Salour", email = "230499@buas.nl"},
    {name = "Noah Ivanisevic", email = "235738@buas.nl"},
    {name = "Kosta Ljubisavljevic", email = "233101@buas.nl"},
    {name = "Ricardo de Sousa", email = "235038@buas.nl"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dynamic = ["dependencies"]

[tool.poetry]
name = "emotion-clf-pipeline"
version = "0.1.0"
description = "This project aims to develop an NLP pipeline that processes video or audio, transcribes it, and classifies the emotion. The pipeline will be deployed on Azure using MLOps principles to enable automated workflows, cloud deployment, and robust monitoring."
authors = [
    "Soheil Mohammadpour <231754@buas.nl>",
    "Erfan Salour <230499@buas.nl>",
    "Noah Ivanisevic <235738@buas.nl>",
    "Kosta Ljubisavljevic <233101@buas.nl>",
    "Ricardo de Sousa <235038@buas.nl>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
# PyTorch dependencies are now in optional groups below
transformers = "^4.51.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
nltk = "^3.9.1"
seaborn = "^0.13.2"
assemblyai = "^0.40.2"
openpyxl = "^3.1.5"
sentence-transformers = "^4.1.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
textblob = "^0.19.0"
pytubefix = "^8.13.1"
whisper = "^1.1.10"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
torch = {version = "*", source = "pytorch-cpu", markers = "sys_platform == 'darwin'"}
torchvision = {version = "*", source = "pytorch-cpu", markers = "sys_platform == 'darwin'"}
torchaudio = {version = "*", source = "pytorch-cpu", markers = "sys_platform == 'darwin'"}

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
torch = {version = "*", source = "pytorch-cuda", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchvision = {version = "*", source = "pytorch-cuda", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}
torchaudio = {version = "*", source = "pytorch-cuda", markers = "sys_platform == 'win32' or sys_platform == 'linux'"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"